Fixing spacing issue.

--- a/static/css/campout.css
+++ b/static/css/campout.css
@@ -49,6 +49,6 @@
     transition-duration: 0.5s;
 }
 
-#summary table > tbody > tr > td:nth-child(2) {
+#summary .quantity {
   text-align: center;
 }
